--- a/index.html
+++ b/index.html
@@ -98,15 +98,40 @@
         </div>
     </header>
     <section class="banner">
-        <div class="position-relative">
-            <img src="img/person-cleaning-room-cleaning-staff-is-using-cloth-spraying-disinfectant-wipe-glass-company-office-room-cleaning-staff-maintaining-cleanliness-organization.png" alt="#">
-            <div class="banner-content">
-                <h3>Detaylı Temizlik
-                    Hizmeti</h3>
-                <a href="#">İletişime Geç</a>
+        <div class="banner-slider">
+            <!-- Slide 1 -->
+            <div class="position-relative">
+                <img src="img/person-cleaning-room-cleaning-staff-is-using-cloth-spraying-disinfectant-wipe-glass-company-office-room-cleaning-staff-maintaining-cleanliness-organization.png" alt="#">
+                <div class="banner-content">
+                    <div>
+                        <h3>Detaylı Temizlik Hizmeti</h3>
+                        <a href="#">İletişime Geç</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Slide 2 -->
+            <div class="position-relative">
+                <img src="img/person-cleaning-room-cleaning-staff-is-using-cloth-spraying-disinfectant-wipe-glass-company-office-room-cleaning-staff-maintaining-cleanliness-organization.png" alt="#">
+                <div class="banner-content">
+                    <div>
+                        <h3>Profesyonel Temizlik</h3>
+                        <a href="#">Hizmetlerimiz</a>
+                    </div>
+                </div>
+            </div>
+            <!-- Slide 3 -->
+            <div class="position-relative">
+                <img src="img/person-cleaning-room-cleaning-staff-is-using-cloth-spraying-disinfectant-wipe-glass-company-office-room-cleaning-staff-maintaining-cleanliness-organization.png" alt="#">
+                <div class="banner-content">
+                    <div>
+                        <h3>Uygun Fiyatlı Temizlik</h3>
+                        <a href="#">Detaylı Bilgi</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+    
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
